2009-08-20  Lin Ma  <Lin.Ma@Sun.COM>

	* configure.in: Uses absolute pathes for private headers/libs.

2009-08-20  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_condition_vbox.c (_cu_cond_combo_filter_visible_cb):
	* common/nwamui_cond.c (nwamui_cond_field_to_str):
	Fixed 9655 edit rules active connections - has incorrect options
	listed.
	* common/nwamui_daemon.c
	(nwamui_daemon_update_status_from_object_state_event):
	Removed undefined symbol due to new nwam header.
	* configure.in:
	Add options: --enable-private-nwam-headers/libs
	* daemon/nwam-enm-item.c (on_nwam_enm_notify):
	10561 right click icon menu should grey out vpn 'stop' when app
	activated by rules
	* daemon/nwam-menuitem.c (nwam_menuitem_notify_cb):
	Changed log format.

2009-08-18  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_location_dialog.c (nwam_location_dialog_class_init),
	(location_set_property), (nwam_compose_tree_view),
	(nwam_location_dialog_init), (nwam_update_obj), (refresh), (apply),
	(nwam_location_dialog_finalize),
	(nwam_location_connection_enabled_toggled_cb),
	(nwam_location_connection_view_row_activated_cb),
	(nwam_treeview_update_widget_cb), (on_button_clicked),
	(location_switch_loc_cb_toggled),
	(location_activation_combo_changed_cb), (response_cb),
	(nwam_location_connection_toggled_cell_sensitive_func):
	* daemon/status_icon.c (daemon_active_ncp_changed),
	(daemon_active_env_changed), (nwam_menu_update_wifi_section),
	(nwam_status_icon_run), (nwam_status_icon_set_status),
	(location_model_menuitems), (on_activate_static_menuitems),
	(nwam_menu_recreate_env_menuitems),
	(nwam_menu_create_static_menuitems):
	Gconf value "switch_loc_manually" is only used for update location
	menu-items, could be changed later. Fixes for 9561 cannot switch
	locations.

2009-08-17  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_ncu.h, common/nwamui_ncu.c: 
	  Change to dhcp and autoconf are handled, using booleans since this
	  is more like how NWAM works now. The only IPs stored in the tree