@@ -177,7 +177,7 @@ nwam_compose_tree_view (NwamConnStatusPanel *self)
           NULL);
 
         g_object_set (cell,
-          "yalign", 0,
+          "yalign", 0.0,
           NULL );
 
         /* Add 2nd wireless strength icon */
@@ -185,7 +185,7 @@ nwam_compose_tree_view (NwamConnStatusPanel *self)
         gtk_tree_view_column_pack_end(col, cell, FALSE);
 
         g_object_set (cell,
-          "yalign", 0,
+          "yalign", 0.0,
           NULL );
 
         gtk_tree_view_column_set_cell_data_func (col,
@@ -246,7 +246,7 @@ nwam_compose_tree_view (NwamConnStatusPanel *self)
         g_object_set (cell,
           "xalign", 1.0,
           "weight", PANGO_WEIGHT_BOLD,
-          "yalign", 0,
+          "yalign", 0.0,
           NULL );
 
         gtk_tree_view_column_set_cell_data_func (col,
